# kinform

./: .env.example  .gitattributes  .gitignore  README.md  middleware.ts  package-lock.json  package.json  turbo.json  vercel.json
.github/workflows/: ci.yml  kinform-governance.yml
app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
app/academic/: page.tsx
app/aperture/: page.tsx
app/atelier/: page.tsx
app/clasp/: page.tsx
app/designs/: page.tsx
app/fishnet/: page.tsx
app/halter/: page.tsx
app/request-sample/: page.tsx
app/story/: page.tsx
app/tether/: page.tsx
app/wholesale/: page.tsx
apps/payload-studio/: README.md  next.config.ts  package.json  tailwind.config.cjs  tsconfig.json
apps/persona-genai/: Dockerfile  README.md  openapi.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
apps/persona-genai/app/: __init__.py  db.py  governance.py  main.py  schemas.py  simulation.py
apps/persona-genai/app/agents/: __init__.py  analytics.py  brand_voice.py  compliance.py  supervisor.py
apps/persona-genai/kinform_persona/: __init__.py  agents.py  app.py  config.py  llm.py  openapi_dump.py  repository.py  simulation.py  state_machine.py
apps/persona-genai/tests/: conftest.py  test_api.py  test_governance.py  test_pipeline.py  test_simulation_flow.py
apps/storefront/: MARKETING-CAPTIONS.md  eslint.config.mjs  next.config.ts  package.json
components/forms/: InterestForm.tsx
components/layout/: Footer.tsx  Header.tsx  ProductionNav.tsx
components/preorder/: PreOrderTeaser.tsx  (+1 more)
docs/: architecture.md
lib/: actions.ts  designs.ts  earrings.ts  grading.ts  inquiries.ts
scripts/: demo_e2e.py
(+93 files in other folders)
