[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kinform-persona-genai"
version = "1.0.0"
description = "KINFORM PersonaGenAI — multi-agent campaign orchestrator (FastAPI + LangGraph)."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.7,<3.0",
  "SQLAlchemy>=2.0,<3.0",
  "kinform-shared",
  "kinform-torqued-graph",
]

[project.optional-dependencies]
langgraph = ["langgraph>=0.2", "langchain-core>=0.3"]
openai = ["openai>=1.40"]
dev = ["pytest>=8", "httpx>=0.27", "pytest-asyncio>=0.23"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
